syntax = "proto3";

service ItemService {

        rpc GetItems(Item) returns(Item) {}

}

message Item {
        string title = 1;
}
